2005-12-03  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC3 release.

2005-10-18  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for RC1 release.

2005-09-28  Kristian Høgsberg  <krh@redhat.com>

	* AUTHORS: Copy bits from COPYING here.

	* README: Copy first paragraph from man page.

	* Makefile.am (EXTRA_DIST): Add swap.km.
