@@ -32,7 +32,7 @@ xmodmap_SOURCES =	\
         xmodmap.c \
         xmodmap.h
 
-appman_SOURCES = \
+appman_PRE = \
         xmodmap.man
 
 EXTRA_DIST = \
@@ -40,9 +40,9 @@ EXTRA_DIST = \
 
 appmandir = $(APP_MAN_DIR)
 
-appman_DATA = $(appman_SOURCES:man=@APP_MAN_SUFFIX@)
+appman_DATA = $(appman_PRE:man=@APP_MAN_SUFFIX@)
 
-EXTRA_DIST += $(appman_SOURCES)
+EXTRA_DIST += $(appman_PRE)
 CLEANFILES = $(appman_DATA)
 
 SED = sed
